--- a/Signal/translations/ru.lproj/Localizable.strings
+++ b/Signal/translations/ru.lproj/Localizable.strings
@@ -1049,7 +1049,7 @@
 "CHAT_LIST_UNREAD_FILTER_MENU_ACTION" = "Отфильтровать по непрочитанным";
 
 /* Message displayed on chat list when Filter by Unread is enabled but no unread chats are available */
-"CHAT_LIST_UNREAD_FILTER_NO_CHATS" = "No unread chats";
+"CHAT_LIST_UNREAD_FILTER_NO_CHATS" = "Нет непрочитанных чатов";
 
 /* Title for the color & wallpaper settings view. */
 "COLOR_AND_WALLPAPER_SETTINGS_TITLE" = "Цвет и обои чата";
@@ -6434,7 +6434,7 @@
 "SETTINGS_DONATE" = "Поддержите Signal";
 
 /* Title for help button and help pages in app settings. */
-"SETTINGS_HELP" = "Помощь";
+"SETTINGS_HELP" = "Поддержка";
 
 /* Settings table view cell label */
 "SETTINGS_INVITE_TITLE" = "Пригласить друзей";
