--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Hem actualitzat el panell de control que apareix durant les trucades de veu i videotrucades. Ara podràs lliscar cap amunt al panell de control per veure la llista de persones que estan a la trucada i veure qui ha aixecat la mà i executar altres tasques ràpides.
