--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Vi har opdateret kontrolpanelet, der vises under tale- og videoopkald. Hvis du vil gemme dine bedste vittigheder og mest interessante punkter, indtil din yndlingsperson lytter, kan du nu stryge op på kontrolpanelet for at se listen over personer, der er i opkaldet, se, hvem der har løftet hånden, og også udføre andre hurtige handlinger.
