--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Wir haben die Bedienleiste aktualisiert, die während Sprach- und Videoanrufen angezeigt wird. Du möchtest dir deine Witze und Geschichten für deine guten Freunde aufsparen? Auf der Bedienleiste kannst du jetzt nach oben wischen, um zu sehen, wer am Anruf teilnimmt oder die Hand hebt und welche anderen Schnellaktionen sich ausführen lassen.
