--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Ενημερώσαμε τον πίνακα ελέγχου που εμφανίζεται κατά τη διάρκεια φωνητικών κλήσεων και βιντεοκλήσεων. Τώρα μπορείς να σύρεις προς τα επάνω στον πίνακα ελέγχου για να δεις τη λίστα των ατόμων που συμμετέχουν στην κλήση, να δεις ποιος έχει σηκώσει το χέρι του και να εκτελέσεις άλλες γρήγορες ενέργειες.
