--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Actualizamos el panel de control que aparece durante las llamadas de voz y videollamadas. Si quieres guardar tus mejores chistes y opiniones más interesantes hasta que tu persona favorita esté escuchando, ahora puedes deslizar el dedo hacia arriba en el panel de control para ver la lista de personas que están en la llamada, ver quién ha levantado la mano y realizar otras acciones rápidas.
