--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• वॉइस और वीडियो कॉल के दौरान दिखने वाले कंट्रोल पैनल को हमने अपडेट कर दिया है। अगर आप अपने सबसे अच्छे चुटकुले और दिलचस्प बातें उस समय के लिए बचाकर रखना चाहते हैं, जब आपका पसंदीदा व्यक्ति सुन रहा हो, तो अब आप कंट्रोल पैनल पर स्वाइप अप करके कॉल में मौजूद लोगों की सूची देख सकते हैं, उन लोगों को देख सकते हैं जिन्होंने अपना हाथ खड़ा किया है, और तुरंत की जा सकने वाली दूसरी कार्रवाइयाँ भी कर सकते हैं।
