--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Ažurirali smo upravljačku ploču koja se pojavljuje tijekom glasovnih poziva i videopoziva. Sada možete prijeći prstom prema gore na upravljačkoj ploči da biste vidjeli popis osoba prisutnih u pozivu, saznali tko je podigao ruku ili izvršili slične brze radnje.
