--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Frissítettük a hang- és videohívások közben megjelenő vezérlőpultot. Mostantól az ujjad vezérlőpulton való felfelé húzásával megtekintheted a hívásban részt vevő személyek listáját, megnézheted, ki emelte fel a kezét, és egyéb gyors műveleteket is végrehajthatsz.
