--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Kami memperbarui panel kontrol yang muncul selama panggilan suara dan video. Sekarang Anda dapat mengusap ke atas di bagian panel kontrol untuk melihat daftar orang yang ada dalam panggilan, melihat siapa yang angkat tangan, dan juga melakukan tindakan cepat lainnya.
