--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Abbiamo aggiornato il pannello di controllo che appare durante le chiamate vocali e le videochiamate. Da ora ti basterà scorrere in su dal pannello di controllo per eseguire tutta una serie di azioni rapide, come vedere chi ha alzato la mano o controllare che la tua persona preferita sia entrata in chiamata.
