--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Kami mengemas kini panel kawalan yang muncul semasa panggilan suara dan video. Kini anda boleh leret ke atas pada panel kawalan untuk melihat senarai orang yang ada dalam panggilan, yang mengangkat tangan dan melakukan tindakan pantas yang lain.
