--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• We hebben het bedieningspaneel dat tijdens spraak- en video-oproepen verschijnt aangepast. Je kunt nu omhoog vegen in het bedieningspaneel om de lijst met gespreksdeelnemers te bekijken, te zien wie zijn hand heeft opgestoken en andere snelle acties uit te voeren.
