--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Zaktualizowaliśmy panel sterowania pojawiający się podczas połączeń głosowych i wideo. Jeśli chcesz zaczekać z opowiedzeniem najlepszego żartu do momentu, gdy Twoja ulubiona koleżanka dołączy do spotkania, mamy dobrą wiadomość: od teraz po przesunięciu palcem w górę po panelu sterowania wyświetlisz listę osób uczestniczących w spotkaniu i podnoszących rękę, a także wykonasz szybko inne przydatne czynności.
