--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Am actualizat panoul de control care apare în timpul apelurilor vocale și video. Dacă dorești să îți păstrezi cele mai bune glume și cele mai interesante păreri până când persoana preferată te ascultă, acum poți glisa în sus pe panoul de control pentru a vizualiza lista persoanelor care participă la apel, pentru a vedea cine a ridicat mâna și pentru a efectua și alte acțiuni rapide.
