--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Мы обновили панель управления, которая появляется во время аудио- и видеозвонков. Если вы хотите сохранить свои лучшие шутки и самые интересные моменты до тех пор, пока ваш любимый человек не будет слушать, теперь вы можете провести пальцем вверх по панели управления, чтобы просмотреть список людей, которые участвуют в звонке, увидеть, кто поднял руку, а также выполнить другие быстрые действия.
