--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Ми оновили панель керування, що з'являється під час аудіо- та відеовикликів. Якщо хочеться приберегти найкращі жарти й найцікавіші тези для конкретної людини, тепер можна просто потягти вгору панель керування й переглянути учасників виклику, побачити, хто підняв руку, і виконати інші швидкі дії.
