--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Chúng tôi đã cập nhật bảng điều khiển xuất hiện trong quá trình thực hiện cuộc gọi thoại hoặc cuộc gọi video. Giờ đây bạn có thể vuốt lên ở bảng điều khiển để xem danh sách người đang tham gia cuộc gọi, người giơ tay, và còn có thể thực hiện các thao tác nhanh khác.
