--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• 我们更新了语音和视频通话期间显示的控制面板。现在您可以在控制面板上向上滑动以查看通话中的人员列表，并查看谁举了手以及执行其他快捷操作。
