--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Aktualizovali jsme ovládací panel, který se zobrazuje během hlasových a video hovorů. Nyní můžete přejetím prstu po ovládacím panelu zobrazit seznam lidí, kteří se účastní hovoru, podívat se, kdo má zvednutou ruku, a provádět další rychlé kroky.
