--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Le panneau de commande qui s’affiche lors des appels vocaux et vidéo a de nouveaux tours dans son sac. Chercher désespérément vos parents dans le public pendant les spectacles scolaires vous a traumatisé ? Cette fonctionnalité va vous rassurer : il suffit maintenant de balayer le panneau de commande vers le haut pour afficher la liste des participants, voir ceux qui ont levé la main et effectuer d’autres actions rapides.
