--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Aktualizovali sme ovládací panel, ktorý sa zobrazuje počas hlasových hovorov a videohovorov. Teraz môžete potiahnutím nahor po ovládacom paneli zobraziť zoznam ľudí, ktorí sa zúčastňujú hovoru, zistiť, kto zdvihol ruku, a vykonať ďalšie rýchle akcie.
