--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Vi har uppdaterat kontrollpanelen som visas under röst- och videosamtal. Nu kan du svepa upp på kontrollpanelen för att visa listan över personer som deltar i samtalet, se vem som har räckt upp handen och utföra andra snabba åtgärder.
