--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• We updated the control panel that appears during voice and video calls. If you want to save your best jokes and most interesting points until your favorite person is listening, now you can swipe up on the control panel to view the list of people who are in the call, see who has raised their hand, and perform other quick actions too.
+• Sesli ve görüntülü aramalar sırasında beliren kontrol panelini güncelledik. Böylece aramadaki kişilerin listesini görüntülemek, kimin elini kaldırdığını görmek ve diğer hızlı eylemleri gerçekleştirmek için kontrol panelini yukarı kaydırabilirsin.
